--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -17,7 +17,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
+        run: npm run
 
       - name: Deploy
         run: |
@@ -25,6 +25,6 @@ jobs:
             cd /path/to/your/application
             git pull origin main
             npm install
-            npm run build
+            npm run
             pm2 restart app
           EOF
